--- a/src/index.css
+++ b/src/index.css
@@ -23,11 +23,15 @@ a:hover {
 }
 
 body {
+  background: #121212;
+  color: #f5f5f5;
+  font-family: 'Poppins', sans-serif;
   margin: 0;
+  padding: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 h1 {
